# helpers

./: LICENSE  README.md  mpl_plotting_helpers.py  pandas_helpers.py  setup.cfg  setup.py  stats_helper.py  stats_helpers.py  tests.ipynb  western_helpers.py
.ipynb_checkpoints/: tests-checkpoint.ipynb
src/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/helpers/: argcheck_helpers.py  general_helpers.py  mpl_plotting_helpers.py  pandas_helpers.py  proteomics_helpers.py  stats_helpers.py  western_helpers.py
src/helpers/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  argcheck_helpers-checkpoint.py  mpl_plotting_helpers-checkpoint.py  proteomics_helpers-checkpoint.py  stats_helpers-checkpoint.py  western_helpers-checkpoint.py
src/helpers/examples/: testwest.xls
src/helpers/mph_modules/: barcharts.py  dotplots.py  heatmaps.py  testwest.xls  testwest_2.xls  testwest_2_statistics.xlsx  testwest_statistics.xlsx  volcano_erupt.py
src/helpers/mph_modules/.ipynb_checkpoints/: dotplots-checkpoint.py  heatmaps-checkpoint.py  volcano_erupt-checkpoint.py
src/helpers_kendeegz.egg-info/: PKG-INFO  SOURCES.txt
