[metadata]
name = helpers-kendeegz
version = 0.0.1
author = Kenneth P. Callhana
author_email = kennydeegz@gmail.com
description = Python 3 scripts with helper functions to automate tasks like statistics, plotting, and data management.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kendeegz/helpers
project_urls =
    Bug Tracker = https://github.com/kendeegz/helpers/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
 
[options.packages.find]
where = src
